--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
   <script src="main.js"></script>
 </head>
 <body>
-	<div class="spot dot">1</div>
-	<div class="press">PRESS ME</div>
-	<div class="container"></div>
-	<div class="cap"></div>
+	<div class="dot">1</div>
+<div class="press">PRESS ME</div>
+<div class="container"></div>
+<div class="cap"></div>
+<div class="target">
+  <div class="ring">
+    <div class="secondRing"></div>
+  </div>
+</div>
+<button class="reset">Reset</button>
+<p class="luckyColor">Your lucky color (color of most dots) is: <span class="color"></span></p>
+<p class="luckyNumber">Your lucky number (average of numbers in tube) is: <span class="number"></span></p>
 </body>
 </html>
